--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Exo+2:wght@800&display=swap');
+
+::selection{
+    background-color: none;
+}
+
 html {
     margin: 0 auto;
     padding: unset;
+    justify-content: center;
 }
 
 body {
@@ -20,9 +27,37 @@ body {
 
 }
 
-.musicBtn {
+
+.playBtn {
+    all:unset;
     position: absolute;
+    padding: 0 0 0 3px;
     top: 50%;
     left: 50%;
+    transform: translate(-50%, -50%);
+    width: 140px;
+    height: 70px;
+    border:2px solid powderblue;
+    border-radius: 10px;
+    font-family: 'Exo 2', sans-serif;
+    font-size: 30px;
+    letter-spacing: 3px;
+    text-align: center;
+    transition: 0.2s;
+    color: slategray;
+    background-color: white;
+    box-shadow: powderblue  0 0 25px;
+    cursor: url(cursor.png) 2 2, pointer;
+    opacity: 1;
+}
 
+.playBtn:active{
+    padding: 0 0 0 3px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0.9);
+    color: gray;
+    border:2px solid slategray;
+    box-shadow: powderblue 0 0 10px;
+    opacity: 0.7;
 }
