--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Exo+2:wght@800&display=swap');
 
-::selection{
+::selection {
     background-color: none;
 }
 
@@ -20,44 +20,87 @@ body {
     display: flex;
     margin: 0 auto;
     padding: 0 auto;
-    width: 100%;
-    height: 100%;
+    width: 100vh;
+    height: 100vh;
     top: 0;
     left: 0;
 
 }
 
-
-.playBtn {
-    all:unset;
+nav {
     position: absolute;
-    padding: 0 0 0 3px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+
+}
+
+.Btn {
+    all: unset;
+    cursor: pointer;
+}
+
+input[type=button]:hover {
+    transition: 0.1s linear;
+    color: skyblue;
+}
+
+.play {
+    padding: 0 0 0 3px;
     width: 140px;
     height: 70px;
-    border:2px solid powderblue;
+    border: 2px solid powderblue;
     border-radius: 10px;
     font-family: 'Exo 2', sans-serif;
     font-size: 30px;
     letter-spacing: 3px;
     text-align: center;
-    transition: 0.2s;
+    transition: 0.2s linear;
     color: slategray;
     background-color: white;
-    box-shadow: powderblue  0 0 25px;
-    cursor: url(cursor.png) 2 2, pointer;
+    box-shadow: powderblue 0 0 15px;
     opacity: 1;
 }
 
-.playBtn:active{
+.play:active {
     padding: 0 0 0 3px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(0.9);
+    transform: scale(0.9);
     color: gray;
-    border:2px solid slategray;
+    border: 2px solid slategray;
     box-shadow: powderblue 0 0 10px;
     opacity: 0.7;
 }
+
+
+.prev,
+.next {
+    transform: translate(0, -10%);
+    padding: 0 20px 0 20px;
+    margin: 0 auto;
+    color: white;
+    font-size: 4.5em;
+    font-family: fantasy;
+    text-shadow: powderblue 0 0 15px;
+    transition: 0.1s linear;
+
+}
+
+input[type=button]:not(.play):active {
+    color: skyblue;
+    text-shadow: powderblue 0 0 10px;
+    opacity: 0.8;
+}
+
+.blink{
+    
+}
+
+.music{
+    display: none;
+}
+
+
